# Dinora

./: .gitignore  README.md  pyproject.toml  run.sh
assets/treeviz-example/: state
configs/elofish/: stockfish_dinora_0.5s.json  stockfish_dinora_1s.json  stockfish_dinora_mcts_batch.json  stockfish_dinora_vloss_1s.json
configs/rl/: dev.json
configs/train/: dev.json  overfit_me.json  prod.json
data/handmade_val/: handmade.json  human_eval.txt
docs/: installation_usage.md  profile.md  training.md
jupyter/: train.ipynb
src/bench/: __main__.py  cli.py
src/cploss/: evaluate.py  generate.py
src/dataset/: __main__.py  make.py  make_cli.py  upload.py  upload_cli.py
src/dataset/encoders/: compact_board_tensor.py  outcome.py
src/dinora/: __main__.py  cli.py  engine.py  pgntools.py
src/dinora/encoders/: board_representation.py  board_tensor.py  outcome.py  policy.py
src/dinora/models/: __init__.py  alphanet.py  base.py  cached_model.py  handcrafted.py  nnwrapper.py  onnxmodel.py
src/dinora/search/: base.py  noise.py  registered.py  stoppers.py
src/dinora/search/ext_mcts/: search.py  searcher.py  uci_info.py
src/dinora/search/mcts/: mcts.py  params.py
src/dinora/search/mcts_batch/: mcts_batch.py
src/dinora/search/mcts_vloss/: mcts_vloss.py  params.py
src/dinora/search/onemove/: onemove.py
src/dinora/train/: fit.py  train_callbacks.py
src/dinora/train/compact_dataset/: make.py  make_cli.py
src/dinora/train/handmade_val_dataset/: add_stockfish_eval.py
src/dinora/uci/: cli.py  uci.py
src/elofish/: __main__.py  elofish.py
src/elofish/glicko2/: glicko2.py
src/onnxtools/: __main__.py  cli.py  export_onnx.py
src/rl/: __main__.py  pipeline.py  selfplay.py
src/train/: datamodules.py  fit.py  train_callbacks.py
src/train/handmade_val_dataset/: add_stockfish_eval.py
src/treeviz/: __main__.py  cli.py  treeviz.py
src/tuner/: tune.py
tests/: test_board_repr.py  test_handmade_val_dataset.py  test_mate.py  test_mcts_batch.py  test_model_batch.py  test_pgntools.py
tests/train/: test_train_callbacks.py
